--- a/Desktop/src/styles/login.module.css
+++ b/Desktop/src/styles/login.module.css
@@ -1,4 +1,4 @@
-.containerLogin {
+body {
     background-image: url("../assets/img/background-desktop.png");
     background-size: cover;
     background-repeat: no-repeat;
