--- a/Desktop/src/index.css
+++ b/Desktop/src/index.css
@@ -1,5 +1,5 @@
 /* :root { */
-  /* line-height: 1.5;
+/* line-height: 1.5;
   font-weight: 400;
   
   color-scheme: light dark;
@@ -12,14 +12,18 @@
   -moz-osx-font-smoothing: grayscale; */
 /* } */
 
-body, html, :root {
+body,
+html,
+:root {
   /* background: #AF0C07; */
-  /* background: linear-gradient(0deg, rgba(63, 3, 1, 1) 8%, rgba(175, 12, 7, 1) 100%); */
+  background: linear-gradient(0deg, rgba(63, 3, 1, 1) 10%, rgba(175, 12, 7, 1) 100%);
   /* overflow-y: hidden; */
   font-family: 'Poppins';
   min-height: 100vh;
   padding: 0;
-  margin: 0;  
+  margin: 0;
+  overflow: hidden;
+
 }
 
 
