colocando classes genéricas para se aplicar à todas as páginas

--- a/Desktop/src/index.css
+++ b/Desktop/src/index.css
@@ -50,6 +50,12 @@ html,
   flex-wrap: wrap;
 }
 
+.tituloPage {
+  font-size: 1.8em;
+  font-weight: 500;
+  margin-bottom: 0.5em;
+  text-align: left;
+}
 
 
 /* a {
