add cards de dashboard

--- a/Desktop/src/index.css
+++ b/Desktop/src/index.css
@@ -57,6 +57,13 @@ html,
   text-align: left;
 }
 
+.tituloCard {
+  font-size: 1.3em;
+  font-weight: 500;
+  margin: 0;
+  margin-bottom: 0.8em;
+}
+
 
 /* a {
   font-weight: 500;
