--- a/Desktop/src/styles/tarefas.css
+++ b/Desktop/src/styles/tarefas.css
@@ -22,7 +22,7 @@
   justify-content: space-between;
 }
 
-.tituloCard {
+.tituloCardMenor {
   font-size: 1em;
   font-weight: 500;
   margin-bottom: 0.3em;
@@ -34,6 +34,3 @@
   overflow-wrap: break-word;
   padding-left: 1em;
 }
-
-/* Documentos */
-
