--- a/Desktop/src/styles/configuracoes.css
+++ b/Desktop/src/styles/configuracoes.css
@@ -1,9 +1,44 @@
-.contaCard {
-    width: 35%;
+.containerConta {
+    width: 30%;
 }
 
 .perfilCard {
-    flex: 1
+    display: flex;
+    flex-direction: column;
+    padding: 1em;
+    gap: 2em;
+}
+
+.containerPerfilCard {
+    flex: 1;
+}
+
+.cardInterno {
+    padding: 1em;
+}
+
+.contaTitulo {
+    font-weight: 500;
+}
+
+.subtituloConta {
+    color: #848484;
+    font-weight: 500;
+}
+
+.tituloConta {
+    font-weight: 500;
+}
+
+.nomePerfil {
+    font-weight: 500;
+    font-size: 2.3em;
+}
+
+.botaoEditar {
+    background-color: #fff;
+    border: none;
+color: #A50702;
 }
 
 .inputsConfiguracoes {
@@ -14,7 +49,7 @@
 }
 
 .inputsConfiguracoes input {
-    background-color: #E6E6E6;
+    background-color: #f0f0f0;
     border: none;
     border-radius: 8px;
     height: 40px;
@@ -24,4 +59,29 @@
 
 .inputsConfiguracoes input:focus {
     outline: none;
+}
+
+.botoesPerfil {
+    display: flex;
+    gap: 2em;
+    justify-content: center;
+    align-items: center;
+}
+
+.botao {
+    padding: 7px 60px;
+    border-radius: 8px;
+    font-size: 15px;
+    cursor: pointer;
+    border: none;
+}
+
+.salvar {
+    background-color: #A50702;
+    color: #fff;
+}
+
+.descartar {
+    background-color: #C5C5C5;
+    color: #5C5C5C;
 }
