arrumando classes estilizações para se tornarem gerais

--- a/Desktop/src/styles/home.css
+++ b/Desktop/src/styles/home.css
@@ -30,12 +30,11 @@
   height: fit-content;
 }
 
-.cardHomeDashboards {
+/* .cardHomeDashboards {
   background-color: #fff;
   padding: 1em;
   border-radius: 10px;
-  /* height: 40em; */
-}
+} */
 
 .cardHomeAtividades {
   background-color: #fff;
