--- a/Desktop/src/index.css
+++ b/Desktop/src/index.css
@@ -39,6 +39,7 @@ html,
   margin-top: 1.5em;
   overflow-y: auto;
   overflow-x: hidden;
+  position: relative;
 }
 
 .containerCards {
@@ -76,6 +77,28 @@ html,
 }
 
 .tresPontinhos {
+  cursor: pointer;
+  position: relative;
+}
+
+.menuTresPontinhos {
+  text-align: center ;
+  margin: 0;
+  font-size: 0.65em;
+  background-color: #E9E9E9;
+  position: absolute;
+  border-radius: 10px;
+  padding: 0em 1.4em;
+}
+
+.menuTresPontinhos ul {
+  padding: 0;
+  list-style: none;
+}
+
+
+.menuTresPontinhos li {
+  padding: 0;
   cursor: pointer;
 }
 
