passando o backend do mobile para o desktop

--- a/Desktop/src/index.css
+++ b/Desktop/src/index.css
@@ -149,7 +149,7 @@ html,
   border: none;
   align-items: center;
   justify-content: center;
-  background-color: #CE221E;
+  background-color: #a50702;
   color: #fff;
   width: 14em;
 }
