--- a/src/styles/relatorio.css
+++ b/src/styles/relatorio.css
@@ -1,5 +1,5 @@
 .tituloRelatorio {
-    font-size: 1.2em;
+    font-size: 1.1em;
     font-weight: 400;
     margin: 0;
     padding: 1em 1.5em;
@@ -18,6 +18,7 @@
 .linhaCima {
     flex: 1;
     border-top: 1px solid #DBD0CF;
+    padding: 1.8em;
 }
 
 .dadosData {
@@ -25,7 +26,6 @@
     margin: 1.1em;
     text-align: center;
     font-weight: 500;
-
 }
 
 .dados {
@@ -38,4 +38,8 @@
     margin: 0;
     font-weight: 600;
     /* padding: 1em; */
+}
+
+.margin {
+    margin: 0.6em 0em 1.1em 0em;
 }
