--- a/src/styles/relatorio.css
+++ b/src/styles/relatorio.css
@@ -49,3 +49,41 @@
     font-weight: 500;
     margin: 0;
 }
+
+.dataText {
+  font-size: 0.8em;
+  color: #666;
+}
+
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(19, 18, 18, 0.55);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 2000;
+}
+ 
+.modal-box {
+  background: #fff;
+  padding: 2em;
+  width: 22em;
+  border-radius: 12px;
+  text-align: center;
+}
+
+.modal-box h3 {
+  margin-bottom: 1em;
+}
+
+.modal-buttons {
+  margin-top: 1.5em;
+  display: flex;
+  gap: 1em;
+  justify-content: center;
+
+}
